--- a/yolov8_seg_interfaces/package.xml
+++ b/yolov8_seg_interfaces/package.xml
@@ -4,7 +4,7 @@
   <name>yolov8_seg_interfaces</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="docker_semseg@todo.todo">docker_semseg</maintainer>
+  <maintainer email="docker_yolov8_seg@todo.todo">docker_yolov8_seg</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
