--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 __pycache__
 .vscode
 /docker/context
-/docker/Dockerfile.x86_64
+/docker/into_noetic_foxy.sh
 /docker/failed_trials
 /yolov8_seg_ros2/media
+/yolov8_seg_ros2/yolov8_seg_ros2/__pycache__
+/yolov8_seg_ros2/weights
 /yolov8_seg_ros2/yolov8_seg_ros2/__pycache__
