fixed bug with img subscription topic name

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
-__pycache__
+/__pycache__
 .vscode
 /docker/context
 /docker/into_noetic_foxy.sh
 /docker/failed_trials
+/yolov8_seg_ros2/launch/__pycache__
 /yolov8_seg_ros2/media
 /yolov8_seg_ros2/yolov8_seg_ros2/__pycache__
 /yolov8_seg_ros2/weights
 /yolov8_seg_ros2/yolov8_seg_ros2/__pycache__
+/yolov8_seg_ros2/yolov8_seg_ros2/img_for_report
+/yolov8_seg_ros2/yolov8_seg_ros2/img_for_report_res_N
+/yolov8_seg_ros2/yolov8_seg_ros2/img_for_report_res_S
+/yolov8_seg_ros2/yolov8_seg_ros2/img_for_report_res_M
+/yolov8_seg_ros2/yolov8_seg_ros2/inf_yolov8_vis.py
