add 3d_segm nodes

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /yolov8_seg_ros2/yolov8_seg_ros2/img_for_report_res_M
 /yolov8_seg_ros2/yolov8_seg_ros2/inf_yolov8_vis.py
 /yolov8_seg_ros2/yolov8_seg_ros2/camera_2023-06-30-08-58-37_2
+/yolov8_seg_ros2/bags/
