--- a/yolov8_seg_interfaces/CMakeLists.txt
+++ b/yolov8_seg_interfaces/CMakeLists.txt
@@ -21,18 +21,6 @@ find_package(ament_cmake REQUIRED)
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
 
-# find_package(geometry_msgs REQUIRED)
-find_package(std_msgs REQUIRED)
-find_package(rosidl_default_generators REQUIRED)
-
-rosidl_generate_interfaces(${PROJECT_NAME}
-  "msg/Box.msg"
-  "msg/Mask.msg"
-  "msg/Objects.msg"
-  DEPENDENCIES std_msgs
-  # DEPENDENCIES geometry_msgs
-)
-
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
@@ -43,5 +31,23 @@ if(BUILD_TESTING)
   #set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
+
+find_package(geometry_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
+
+rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/Box.msg"
+  "msg/Mask.msg"
+  "msg/Objects.msg"
+  "msg/Roi.msg"
+  "msg/ObjectPointCloud.msg"
+  "msg/ObjectPointClouds.msg"
+  "msg/BoundingBox.msg"
+  "msg/SegTrack.msg"
+  DEPENDENCIES std_msgs sensor_msgs geometry_msgs
+  # DEPENDENCIES geometry_msgs
+)
 
 ament_package()
